--- a/index.ipynb
+++ b/index.ipynb
@@ -45,13 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect('planets.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -95,7 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,13 +190,17 @@
        "7  Neptune   dark blue"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, color from planets;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head(8)"
    ]
   },
   {
@@ -198,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -279,13 +293,19 @@
        "3   8  Neptune   dark blue            14   17.15      1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select *\n",
+    "             from planets\n",
+    "             where mass > 1;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head(4)"
    ]
   },
   {
@@ -297,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -358,13 +378,19 @@
        "3     Mars  0.11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, mass\n",
+    "             from planets\n",
+    "             where mass <= 1;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head(4)"
    ]
   },
   {
@@ -376,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -437,13 +463,19 @@
        "3  Neptune   dark blue"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, color\n",
+    "             from planets\n",
+    "             where num_of_moons > 10;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head(4)"
    ]
   },
   {
@@ -455,8 +487,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -516,13 +550,19 @@
        "1   4   Mars   red             2  0.11      0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select *\n",
+    "             from planets\n",
+    "             where num_of_moons >= 1 and mass <= 1;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head(2)"
    ]
   },
   {
@@ -534,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -589,13 +629,19 @@
        "2  Neptune   dark blue"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, color\n",
+    "             from planets\n",
+    "             where color in ('blue', 'light blue', 'dark blue');\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head(3)"
    ]
   },
   {
@@ -629,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
